--- a/package.json
+++ b/package.json
@@ -5,13 +5,9 @@
   "type": "module",
   "main": "dist/index.js",
   "scripts": {
-    "build": "tsc",
-    "dev": "tsc --watch",
-    "start": "node dist/index.js",
-    "start:auto": "MCP_AUTO_START_POCKETBASE=true node dist/index.js",
-    "prepare": "npm run build",
-    "pocketbase": "./pocketbase/pocketbase serve",
-    "setup": "npm run build && npm run pocketbase"
+    "build-mcp": "tsc",
+    "build": "npm run build-mcp && concurrently \"npm install --prefix web && npm run build --prefix web\" \"npm install --prefix cli && npm run build --prefix cli\" && npm link --prefix cli",
+    "start": "concurrently \"./pocketbase/pocketbase serve\" \"npm run dev --prefix web\""
   },
   "keywords": [
     "mcp",
@@ -26,6 +22,7 @@
   },
   "devDependencies": {
     "@types/node": "^20.0.0",
+    "concurrently": "^9.1.2",
     "typescript": "^5.0.0"
   }
 }
